added card for videos and rearranged some elements for scaling reasons

--- a/src/html/barrio.html
+++ b/src/html/barrio.html
@@ -14,61 +14,69 @@
 
     <div class="container">
         <div class="card">
+
             <div class="main">
-                <h1>BARRIO BREWING CO.</h1>
-                <div class="link">
-                    <a href="https://barriobrewing.com/">WEBSITE</a>
-                    <a href="tel:5207912739">520-791-2739</a>
-                    <a href="https://www.google.com/maps/place/Barrio+Brewing+Co./@32.2179052,-110.9695975,17z/data=!3m1!4b1!4m5!3m4!1s0x86d671862076175f:0x853bdf9b9a4d55ef!8m2!3d32.2179008!4d-110.9674088">800 E 16th St,</a>
+                <div class="description">
+                    <h1>BARRIO BREWING CO.</h1>
+                    <div class="link">
+                        <a href="https://barriobrewing.com/">WEBSITE</a>
+                        <a href="tel:5207912739">520-791-2739</a>
+                        <a href="https://www.google.com/maps/place/Barrio+Brewing+Co./@32.2179052,-110.9695975,17z/data=!3m1!4b1!4m5!3m4!1s0x86d671862076175f:0x853bdf9b9a4d55ef!8m2!3d32.2179008!4d-110.9674088">800 E 16th St,</a>
+                    </div>
+                    <p class="description">Barrio Brewing Co. is a beloved Tucson brewery offering a wide selection of craft beers and delicious pub fare. Located in a historic building, Barrio Brewing Co. provides a cozy atmosphere where patrons can enjoy great company and even better brews. Whether you're a beer enthusiast or just looking for a relaxing hangout spot, Barrio Brewing Co. has something for everyone.</p>
                 </div>
-                <p class="description">Barrio Brewing Co. is a beloved Tucson brewery offering a wide selection of craft beers and delicious pub fare. Located in a historic building, Barrio Brewing Co. provides a cozy atmosphere where patrons can enjoy great company and even better brews. Whether you're a beer enthusiast or just looking for a relaxing hangout spot, Barrio Brewing Co. has something for everyone.</p>
+
+                <div class="hours">
+                    <h2>HOURS</h2>
+                    <table>
+                        <tr>
+                            <th>Day</th>
+                            <th>Hours</th>
+                        </tr>
+                        <tr>
+                            <td>Sun</td>
+                            <td>11:00 AM - 10:00 PM</td>
+                        </tr>
+                        <tr>
+                            <td>Mon</td>
+                            <td>11:00 AM - 10:00 PM</td>
+                        </tr>
+                        <tr>
+                            <td>Tue</td>
+                            <td>11:00 AM - 10:00 PM</td>
+                        </tr>
+                        <tr>
+                            <td>Wed</td>
+                            <td>11:00 AM - 10:00 PM</td>
+                        </tr>
+                        <tr>
+                            <td>Thu</td>
+                            <td>11:00 AM - 10:00 PM</td>
+                        </tr>
+                        <tr>
+                            <td>Fri</td>
+                            <td>11:00 AM - 11:00 PM</td>
+                        </tr>
+                        <tr>
+                            <td>Sat</td>
+                            <td>11:00 AM - 11:00 PM</td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
+
         <div class="card">
-            <h2>HOURS</h2>
-            <div class="hours">
-                <table class="hours-table">
-                    <tr>
-                        <th>Day</th>
-                        <th>Hours</th>
-                    </tr>
-                    <tr>
-                        <td>Sun</td>
-                        <td>11:00 AM - 10:00 PM</td>
-                    </tr>
-                    <tr>
-                        <td>Mon</td>
-                        <td>11:00 AM - 10:00 PM</td>
-                    </tr>
-                    <tr>
-                        <td>Tue</td>
-                        <td>11:00 AM - 10:00 PM</td>
-                    </tr>
-                    <tr>
-                        <td>Wed</td>
-                        <td>11:00 AM - 10:00 PM</td>
-                    </tr>
-                    <tr>
-                        <td>Thu</td>
-                        <td>11:00 AM - 10:00 PM</td>
-                    </tr>
-                    <tr>
-                        <td>Fri</td>
-                        <td>11:00 AM - 11:00 PM</td>
-                    </tr>
-                    <tr>
-                        <td>Sat</td>
-                        <td>11:00 AM - 11:00 PM</td>
-                    </tr>
-                </table>
+            <div class="video">
+                <p>Learn how Barrio Brewing Co expanded to making food</p>
+                <iframe width="560" height="315" 
+                    src="https://www.youtube.com/embed/wGmlE9-XPUM?si=kwtLIyOGSNnkQ3n1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                </iframe>
             </div>
         </div>
     </div>
-    <p>Learn how Barrio Brewing Co expanded to making food</p>
-	<iframe width="560" height="315" 
-        src="https://www.youtube.com/embed/wGmlE9-XPUM?si=kwtLIyOGSNnkQ3n1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-    </iframe>
+
     <div class="container2">
         <div class="card">
             <img class="img" src="..\imgs\barrio_imgs\barrio_outside.jpg" alt="An image of what barrio brewing company looks like on the outside">
@@ -100,3 +108,4 @@
     </div>
 </body>
 </html>
+    
