--- a/src/html/elnene.html
+++ b/src/html/elnene.html
@@ -14,64 +14,72 @@
 
     <div class="container">
         <div class="card">
+
             <div class="main">
-                <h1>AQUI CON EL NENE</h1>
-                <div class="link">
-                    <a href="https://www.aquiconelnene.com/">WEBSITE</a>
-                    <a href="tel:5208895338">(520)-889-5338</a>
-                    <a href="https://www.google.com/maps/place/Aqui+Con+El+Nene+Restaurant/@32.1336744,-110.9715166,17z/data=!3m1!4b1!4m6!3m5!1s0x86d67bb47c20fe25:0x6245e8088de803a8!8m2!3d32.1336699!4d-110.9689417!16s%2Fg%2F11c0qfw5n3?entry=ttu">65 W. Valencia RD</a>
+                <div class="description">
+                    <h1>AQUI CON EL NENE</h1>
+                    <div class="link">
+                        <a href="https://www.aquiconelnene.com/">WEBSITE</a>
+                        <a href="tel:5208895338">(520)-889-5338</a>
+                        <a href="https://www.google.com/maps/place/Aqui+Con+El+Nene+Restaurant/@32.1336744,-110.9715166,17z/data=!3m1!4b1!4m6!3m5!1s0x86d67bb47c20fe25:0x6245e8088de803a8!8m2!3d32.1336699!4d-110.9689417!16s%2Fg%2F11c0qfw5n3?entry=ttu">65 W. Valencia RD</a>
+                    </div>
+                    <p class="description">Aqui con El Nene is a beloved taco truck in Tucson, serving up authentic Mexican street food with a smile. From tacos to burritos to quesadillas, everything on the menu is made with fresh, high-quality ingredients and bursting with flavor. Whether you're grabbing a quick bite on the go or enjoying a leisurely meal with friends, Aqui con El Nene is sure to satisfy your cravings for delicious Mexican cuisine.</p>
                 </div>
-                <p class="description">Aqui con El Nene is a beloved taco truck in Tucson, serving up authentic Mexican street food with a smile. From tacos to burritos to quesadillas, everything on the menu is made with fresh, high-quality ingredients and bursting with flavor. Whether you're grabbing a quick bite on the go or enjoying a leisurely meal with friends, Aqui con El Nene is sure to satisfy your cravings for delicious Mexican cuisine.</p>
+
+                <div class="hours">
+                    <h2>HOURS</h2>
+                    <table>
+                        <tr>
+                            <th>Day</th>
+                            <th>Hours</th>
+                        </tr>
+                        <tr>
+                            <td>Sun</td>
+                            <td>Closed</td>
+                        </tr>
+                        <tr>
+                            <td>Mon</td>
+                            <td>10:00 AM - 11:00 PM</td>
+                        </tr>
+                        <tr>
+                            <td>Tue</td>
+                            <td>10:00 AM - 11:00 PM</td>
+                        </tr>
+                        <tr>
+                            <td>Wed</td>
+                            <td>10:00 AM - 11:00 PM</td>
+                        </tr>
+                        <tr>
+                            <td>Thu</td>
+                            <td>10:00 AM - 11:00 PM</td>
+                        </tr>
+                        <tr>
+                            <td>Fri</td>
+                            <td>10:00 AM - 12:00 AM</td>
+                        </tr>
+                        <tr>
+                            <td>Sat</td>
+                            <td>10:00 AM - 12:00 AM</td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
+
         <div class="card">
-            <h2>HOURS</h2>
-            <div class="hours">
-                <table class="hours-table">
-                    <tr>
-                        <th>Day</th>
-                        <th>Hours</th>
-                    </tr>
-                    <tr>
-                        <td>Sun</td>
-                        <td>Closed</td>
-                    </tr>
-                    <tr>
-                        <td>Mon</td>
-                        <td>10:00 AM - 11:00 PM</td>
-                    </tr>
-                    <tr>
-                        <td>Tue</td>
-                        <td>10:00 AM - 11:00 PM</td>
-                    </tr>
-                    <tr>
-                        <td>Wed</td>
-                        <td>10:00 AM - 11:00 PM</td>
-                    </tr>
-                    <tr>
-                        <td>Thu</td>
-                        <td>10:00 AM - 11:00 PM</td>
-                    </tr>
-                    <tr>
-                        <td>Fri</td>
-                        <td>10:00 AM - 12:00 AM</td>
-                    </tr>
-                    <tr>
-                        <td>Sat</td>
-                        <td>10:00 AM - 12:00 AM</td>
-                    </tr>
-                </table>
+            <div class="video">
+                <p>Check out this video from vlogger Hungry Guy From Hawaii on their experience at Aqui Con El Nene</p>
+                <iframe width="560" height="315" 
+                    src="https://www.youtube.com/embed/c-LCGpXZBcQ?si=0_iHbCG4v0-tL3Tn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                </iframe>
             </div>
         </div>
     </div>
-    <p>Check out this video from vlogger Hungry Guy From Hawaii on their experience at Aqui Con El Nene</p>
-	<iframe width="560" height="315" 
-        src="https://www.youtube.com/embed/c-LCGpXZBcQ?si=0_iHbCG4v0-tL3Tn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-    </iframe>
+
     <div class="container2">
         <div class="card">
-            <img class="img" src="..\imgs\elnene_imgs\nene_menu.jpg" alt="An image of the Aqui Con El Nene menu">
+            <img class="img" src="../imgs/elnene_imgs/nene_menu.jpg" alt="An image of the Aqui Con El Nene menu">
         </div>
         <div class="card">
             <div class="review">
@@ -80,7 +88,7 @@
             </div>
         </div>
         <div class="card">
-            <img class="img" src="..\imgs\elnene_imgs\nene_outside.jpg" alt="The exterior of Aqui Con El Nene Restaurant">
+            <img class="img" src="../imgs/elnene_imgs/nene_outside.jpg" alt="The exterior of Aqui Con El Nene Restaurant">
         </div>
         <div class="card">
             <div class="review">
@@ -89,7 +97,7 @@
             </div>
         </div>
         <div class="card">
-            <img class="img" src="..\imgs\elnene_imgs\nene_sanoranDog.jpg" alt="A Sanoran Hotdog from Aqui Con El Nene Restaurant">
+            <img class="img" src="../imgs/elnene_imgs/nene_sanoranDog.jpg" alt="A Sanoran Hotdog from Aqui Con El Nene Restaurant">
         </div>
         <div class="card">
             <div class="review">
