--- a/src/html/maico.html
+++ b/src/html/maico.html
@@ -15,63 +15,70 @@
     <div class="container">
         <div class="card">
             <div class="main">
-                <h1>MAICO'S MEXICAN RESTAURANT</h1>
-                <div class="link">
-                    <a href="https://sites.google.com/view/maicorestaurantaz">WEBSITE</a>
-                    <a href="tel:5202942836">(520)-294-2836</a>
-                    <a href="https://www.google.com/maps/dir//maico+tucson/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x86d670f384209787:0xf11b7e988ac3d118?sa=X&ved=1t:3061&ictx=111">835 E 22nd St</a>
+                <div class="description">
+                    <h1>MAICO'S MEXICAN RESTAURANT</h1>
+                    <div class="link">
+                        <a href="https://sites.google.com/view/maicorestaurantaz">WEBSITE</a>
+                        <a href="tel:5202942836">(520)-294-2836</a>
+                        <a href="https://www.google.com/maps/dir//maico+tucson/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x86d670f384209787:0xf11b7e988ac3d118?sa=X&ved=1t:3061&ictx=111">835 E 22nd St</a>
+                    </div>
+                    <p class="description">Maico's Mexican Restaurant brings the vibrant flavors of Mexico to Tucson with its authentic dishes and warm hospitality. From savory tacos to hearty enchiladas, each dish is prepared with care and traditional Mexican spices. Whether you're dining in for a family meal or grabbing takeout for a quick bite, Maico's Mexican Restaurant offers a taste of home-cooked Mexican cuisine.</p>
                 </div>
-                <p class="description">Maico's Mexican Restaurant brings the vibrant flavors of Mexico to Tucson with its authentic dishes and warm hospitality. From savory tacos to hearty enchiladas, each dish is prepared with care and traditional Mexican spices. Whether you're dining in for a family meal or grabbing takeout for a quick bite, Maico's Mexican Restaurant offers a taste of home-cooked Mexican cuisine.</p>
+
+                <div class="hours">
+                    <h2>HOURS</h2>
+                    <table>
+                        <tr>
+                            <th>Day</th>
+                            <th>Hours</th>
+                        </tr>
+                        <tr>
+                            <td>Sun</td>
+                            <td>6:00 AM - 8:00 PM</td>
+                        </tr>
+                        <tr>
+                            <td>Mon</td>
+                            <td>6:00 AM - 9:00 PM</td>
+                        </tr>
+                        <tr>
+                            <td>Tue</td>
+                            <td>6:00 AM - 9:00 PM</td>
+                        </tr>
+                        <tr>
+                            <td>Wed</td>
+                            <td>6:00 AM - 9:00 PM</td>
+                        </tr>
+                        <tr>
+                            <td>Thu</td>
+                            <td>6:00 AM - 9:00 PM</td>
+                        </tr>
+                        <tr>
+                            <td>Fri</td>
+                            <td>6:00 AM - 9:00 PM</td>
+                        </tr>
+                        <tr>
+                            <td>Sat</td>
+                            <td>6:00 AM - 9:00 PM</td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
+
         <div class="card">
-            <h2>HOURS</h2>
-            <div class="hours">
-                <table class="hours-table">
-                    <tr>
-                        <th>Day</th>
-                        <th>Hours</th>
-                    </tr>
-                    <tr>
-                        <td>Sun</td>
-                        <td>6:00 AM - 8:00 PM</td>
-                    </tr>
-                    <tr>
-                        <td>Mon</td>
-                        <td>6:00 AM - 9:00 PM</td>
-                    </tr>
-                    <tr>
-                        <td>Tue</td>
-                        <td>6:00 AM - 9:00 PM</td>
-                    </tr>
-                    <tr>
-                        <td>Wed</td>
-                        <td>6:00 AM - 9:00 PM</td>
-                    </tr>
-                    <tr>
-                        <td>Thu</td>
-                        <td>6:00 AM - 9:00 PM</td>
-                    </tr>
-                    <tr>
-                        <td>Fri</td>
-                        <td>6:00 AM - 9:00 PM</td>
-                    </tr>
-                    <tr>
-                        <td>Sat</td>
-                        <td>6:00 AM - 9:00 PM</td>
-                    </tr>
-                </table>
+            <div class="video">
+                <p>Watch vlogger Diane show the Maico's experience</p>
+                <iframe width="560" height="315" 
+                    src="https://www.youtube.com/embed/I5SvSTfPNHg?si=f3fX1QkzI2f4Ac5d&amp;start=295" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                </iframe>
             </div>
         </div>
     </div>
-    <p>Watch vlogger Diane show the Miaco's experience</p>
-	<iframe width="560" height="315" 
-		src="https://www.youtube.com/embed/I5SvSTfPNHg?si=f3fX1QkzI2f4Ac5d&amp;start=295" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-		referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-	</iframe>
+
     <div class="container2">
         <div class="card">
-            <img class="img" src="..\imgs\maico_imgs\maico_exterior.jpg" alt="The exterior view of Maicos">
+            <img class="img" src="..\imgs\maico_imgs\maico_exterior.jpg" alt="The exterior view of Maico's">
         </div>
         <div class="card">
             <div class="review">
