--- a/src/html/rustico.html
+++ b/src/html/rustico.html
@@ -15,60 +15,67 @@
     <div class="container">
         <div class="card">
             <div class="main">
-                <h1>TACOS RUSTICO</h1>
-                <div class="link">
-                    <a href="https://www.tacorustico.com/">WEBSITE</a>
-                    <a href="tel:5206233478">(520) 623-3478</a>
-                    <a href="https://www.google.com/maps/place/El+Taco+Rustico/@32.2490698,-110.9811222,17z/data=!3m1!4b1!4m6!3m5!1s0x86d6719d3300cb99:0xa0b7627aec6eb55e!8m2!3d32.2490653!4d-110.9785473!16s%2Fg%2F11jfq9pvbf?entry=ttu">2281 N Oracle Rd</a>
+                <div class="description">
+                    <h1>TACOS RUSTICO</h1>
+                    <div class="link">
+                        <a href="https://www.tacorustico.com/">WEBSITE</a>
+                        <a href="tel:5206233478">(520) 623-3478</a>
+                        <a href="https://www.google.com/maps/place/El+Taco+Rustico/@32.2490698,-110.9811222,17z/data=!3m1!4b1!4m6!3m5!1s0x86d6719d3300cb99:0xa0b7627aec6eb55e!8m2!3d32.2490653!4d-110.9785473!16s%2Fg%2F11jfq9pvbf?entry=ttu">2281 N Oracle Rd</a>
+                    </div>
+                    <p class="description">Tacos Rustico is a cozy taco spot located in the heart of Tucson. Known for their authentic flavors and fresh ingredients, Tacos Rustico offers a variety of tacos, burritos, and other Mexican delights. Whether you're craving carne asada, al pastor, or vegetarian options, Tacos Rustico has something to satisfy every palate.</p>
                 </div>
-                <p class="description">Tacos Rustico is a cozy taco spot located in the heart of Tucson. Known for their authentic flavors and fresh ingredients, Tacos Rustico offers a variety of tacos, burritos, and other Mexican delights. Whether you're craving carne asada, al pastor, or vegetarian options, Tacos Rustico has something to satisfy every palate.</p>
+
+                <div class="hours">
+                    <h2>HOURS</h2>
+                    <table>
+                        <tr>
+                            <th>Day</th>
+                            <th>Hours</th>
+                        </tr>
+                        <tr>
+                            <td>Sun</td>
+                            <td>7:00 AM - 9:00 PM</td>
+                        </tr>
+                        <tr>
+                            <td>Mon</td>
+                            <td>Closed</td>
+                        </tr>
+                        <tr>
+                            <td>Tue</td>
+                            <td>7:00 AM - 9:00 PM</td>
+                        </tr>
+                        <tr>
+                            <td>Wed</td>
+                            <td>7:00 AM - 9:00 PM</td>
+                        </tr>
+                        <tr>
+                            <td>Thu</td>
+                            <td>7:00 AM - 9:00 PM</td>
+                        </tr>
+                        <tr>
+                            <td>Fri</td>
+                            <td>7:00 AM - 9:00 PM</td>
+                        </tr>
+                        <tr>
+                            <td>Sat</td>
+                            <td>7:00 AM - 9:00 PM</td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
+
         <div class="card">
-            <h2>HOURS</h2>
-            <div class="hours">
-                <table class="hours-table">
-                    <tr>
-                        <th>Day</th>
-                        <th>Hours</th>
-                    </tr>
-                    <tr>
-                        <td>Sun</td>
-                        <td>7:00 AM - 9:00 PM</td>
-                    </tr>
-                    <tr>
-                        <td>Mon</td>
-                        <td>Closed</td>
-                    </tr>
-                    <tr>
-                        <td>Tue</td>
-                        <td>7:00 AM - 9:00 PM</td>
-                    </tr>
-                    <tr>
-                        <td>Wed</td>
-                        <td>7:00 AM - 9:00 PM</td>
-                    </tr>
-                    <tr>
-                        <td>Thu</td>
-                        <td>7:00 AM - 9:00 PM</td>
-                    </tr>
-                    <tr>
-                        <td>Fri</td>
-                        <td>7:00 AM - 9:00 PM</td>
-                    </tr>
-                    <tr>
-                        <td>Sat</td>
-                        <td>7:00 AM - 9:00 PM</td>
-                    </tr>
-                </table>
+            <div class="video">
+                <p>Watch this video to see what Tacos Rustico is all about</p>
+                <iframe width="560" height="315" 
+                    src="https://www.youtube.com/embed/Polb2IQKEO0?si=62KLkY5FWF0rTQzf&amp;start=115" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                </iframe>
             </div>
         </div>
     </div>
-    <p>Watch this video to see what El Taco Rustico is all about</p>
-    <iframe width="560" height="315" 
-        src="https://www.youtube.com/embed/Polb2IQKEO0?si=62KLkY5FWF0rTQzf&amp;start=115" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-    </iframe>
+
     <div class="container2">
         <div class="card">
             <img class="img" src="..\imgs\rustico_imgs\rustico_chef.jpg" alt="">
