--- a/src/html/bisonwitches.html
+++ b/src/html/bisonwitches.html
@@ -14,61 +14,69 @@
 
     <div class="container">
         <div class="card">
+
             <div class="main">
-                <h1>BISON WITCHES</h1>
-                <div class="link">
-                    <a href="https://bisonwitchestucson.com/">WEBSITE</a>
-                    <a href="tel:5207401541">520-740-1541</a>
-                    <a href="https://www.google.com/maps/place/Bison+Witches/@32.2258491,-110.9680137,17z/data=!3m1!4b1!4m6!3m5!1s0x86d6711d0ecea115:0xe1a148e2744f8123!8m2!3d32.2258491!4d-110.9654388!16s%2Fg%2F1td05hjg?entry=ttu">326 N 4TH AVE</a>
+                <div class="description">
+                    <h1>BISON WITCHES</h1>
+                    <div class="link">
+                        <a href="https://bisonwitchestucson.com/">WEBSITE</a>
+                        <a href="tel:5207401541">520-740-1541</a>
+                        <a href="https://www.google.com/maps/place/Bison+Witches/@32.2258491,-110.9680137,17z/data=!3m1!4b1!4m6!3m5!1s0x86d6711d0ecea115:0xe1a148e2744f8123!8m2!3d32.2258491!4d-110.9654388!16s%2Fg%2F1td05hjg?entry=ttu">326 N 4TH AVE</a>
+                    </div>
+                    <p class="description">A non-traditional bar without the traditional "bar food." With plenty of unique food items, Bison Witches always serves with quality.</p>
                 </div>
-                <p class="description">A non-traditional bar without the traditional "bar food." With plenty of unique food items, Bison Witches always serves with quality.</p>
+
+                <div class="hours">
+                    <h2>HOURS</h2>
+                    <table>
+                        <tr>
+                            <th>Day</th>
+                            <th>Hours</th>
+                        </tr>
+                        <tr>
+                            <td>Sun</td>
+                            <td>11:00 AM - 12:00 AM</td>
+                        </tr>
+                        <tr>
+                            <td>Mon</td>
+                            <td>11:00 AM - 12:00 AM</td>
+                        </tr>
+                        <tr>
+                            <td>Tue</td>
+                            <td>11:00 AM - 12:00 AM</td>
+                        </tr>
+                        <tr>
+                            <td>Wed</td>
+                            <td>11:00 AM - 12:00 AM</td>
+                        </tr>
+                        <tr>
+                            <td>Thu</td>
+                            <td>11:00 AM - 12:00 AM</td>
+                        </tr>
+                        <tr>
+                            <td>Fri</td>
+                            <td>11:00 AM - 12:00 AM</td>
+                        </tr>
+                        <tr>
+                            <td>Sat</td>
+                            <td>11:00 AM - 12:00 AM</td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
+
         <div class="card">
-            <h2>HOURS</h2>
-            <div class="hours">
-               <table class="hours-table">
-                    <tr>
-                        <th>Day</th>
-                        <th>Hours</th>
-                    </tr>
-                    <tr>
-                        <td>Sun</td>
-                        <td>11:00 AM - 12:00 AM</td>
-                    </tr>
-                    <tr>
-                        <td>Mon</td>
-                        <td>11:00 AM - 12:00 AM</td>
-                    </tr>
-                    <tr>
-                        <td>Tue</td>
-                        <td>11:00 AM - 12:00 AM</td>
-                    </tr>
-                    <tr>
-                        <td>Wed</td>
-                        <td>11:00 AM - 12:00 AM</td>
-                    </tr>
-                    <tr>
-                        <td>Thu</td>
-                        <td>11:00 AM - 12:00 AM</td>
-                    </tr>
-                    <tr>
-                        <td>Fri</td>
-                        <td>11:00 AM - 12:00 AM</td>
-                    </tr>
-                    <tr>
-                        <td>Sat</td>
-                        <td>11:00 AM - 12:00 AM</td>
-                    </tr>
-                </table>
+            <div class="video">
+                <p>Check out these yummy treats from Bison Witches</p>
+                <iframe width="560" height="315" 
+                    src="https://www.youtube.com/embed/CtRMqLobPHA?si=45KxFmDIP40Ac0Dg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                </iframe>
             </div>
         </div>
     </div>
-    <p>Check out these yummy treats from Bison Witches</p>
-	<iframe width="560" height="315" 
-        src="https://www.youtube.com/embed/CtRMqLobPHA?si=45KxFmDIP40Ac0Dg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-    </iframe>
+
     <div class="container2">
         <div class="card">
             <img class="img" src="../imgs/bisonwitches_imgs/bbq_pork_nachos.jpeg" alt="">
