--- a/src/html/lachingada.html
+++ b/src/html/lachingada.html
@@ -14,61 +14,69 @@
 
     <div class="container">
         <div class="card">
+
             <div class="main">
-                <h1>LA CHINGADA COCINA</h1>
-                <div class="link">
-                    <a href="https://lachingadacocina.com">WEBSITE</a>
-                    <a href="tel:5208678441">520-867-8441</a>
-                    <a href="https://www.google.com/maps/place/La+Chingada+Cocina+Mexicana/@32.2228644,-110.9699213,16z/data=!4m15!1m8!3m7!1s0x86d671803511d3df:0x133b8b69ef161f25!2sLa+Chingada+Cocina+Mexicana!8m2!3d32.2230925!4d-110.9696029!10e5!16s%2Fg%2F11qpr81wl8!3m5!1s0x86d671803511d3df:0x133b8b69ef161f25!8m2!3d32.2230925!4d-110.9696029!16s%2Fg%2F11qpr81wl8?entry=ttu">110 E PENNINGTON ST.</a>
+                <div class="description">
+                    <h1>LA CHINGADA COCINA</h1>
+                    <div class="link">
+                        <a href="https://lachingadacocina.com">WEBSITE</a>
+                        <a href="tel:5208678441">520-867-8441</a>
+                        <a href="https://www.google.com/maps/place/La+Chingada+Cocina+Mexicana/@32.2228644,-110.9699213,16z/data=!4m15!1m8!3m7!1s0x86d671803511d3df:0x133b8b69ef161f25!2sLa+Chingada+Cocina+Mexicana!8m2!3d32.2230925!4d-110.9696029!10e5!16s%2Fg%2F11qpr81wl8!3m5!1s0x86d671803511d3df:0x133b8b69ef161f25!8m2!3d32.2230925!4d-110.9696029!16s%2Fg%2F11qpr81wl8?entry=ttu">110 E PENNINGTON ST.</a>
+                    </div>
+                    <p class="description">La Chingada strives to offer the best Mexican food in Tucson with inviting hospitality and vibrant atmosphere for an unforgettable and authentic taste of Mexico. Using locally sourced ingredients to capture the true authentic flavors of Tucson, serving some amazing margaritas, and a prime downtown location, this place is definitely worth a visit!</p>
                 </div>
-                <p class="description">La Chingada strives to offer the best Mexican food in Tucson with inviting hospitality and vibrant atmosphere for an unforgettable and authentic taste of Mexico. Using locally sourced ingredients to capture the true authentic flavors of Tucson, serving some amazing margaritas, and a prime downtown location, this place is definitely worth a visit!</p>
+
+                <div class="hours">
+                    <h2>HOURS</h2>
+                    <table>
+                        <tr>
+                            <th>Day</th>
+                            <th>Hours</th>
+                        </tr>
+                        <tr>
+                            <td>Sun</td>
+                            <td>9:00 AM - 3:00 PM, 5:00 PM - 10:00 PM</td>
+                        </tr>
+                        <tr>
+                            <td>Mon</td>
+                            <td>9:00 AM - 3:00 PM</td>
+                        </tr>
+                        <tr>
+                            <td>Tue</td>
+                            <td>9:00 AM - 3:00 PM, 5:00 PM - 10:00 PM</td>
+                        </tr>
+                        <tr>
+                            <td>Wed</td>
+                            <td>9:00 AM - 3:00 PM, 5:00 PM - 10:00 PM</td>
+                        </tr>
+                        <tr>
+                            <td>Thu</td>
+                            <td>9:00 AM - 3:00 PM, 5:00 PM - 10:00 PM</td>
+                        </tr>
+                        <tr>
+                            <td>Fri</td>
+                            <td>9:00 AM - 3:00 PM, 5:00 PM - 12:00 AM</td>
+                        </tr>
+                        <tr>
+                            <td>Sat</td>
+                            <td>9:00 AM - 3:00 PM, 5:00 PM - 12:00 AM</td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
+
         <div class="card">
-            <h2>HOURS</h2>
-            <div class="hours">
-                <table class="hours-table">
-                    <tr>
-                        <th>Day</th>
-                        <th>Hours</th>
-                    </tr>
-                    <tr>
-                        <td>Sun</td>
-                        <td>9:00 AM - 3:00 PM, 5:00 PM - 10:00 PM</td>
-                    </tr>
-                    <tr>
-                        <td>Mon</td>
-                        <td>9:00 AM - 3:00 PM</td>
-                    </tr>
-                    <tr>
-                        <td>Tue</td>
-                        <td>9:00 AM - 3:00 PM, 5:00 PM - 10:00 PM</td>
-                    </tr>
-                    <tr>
-                        <td>Wed</td>
-                        <td>9:00 AM - 3:00 PM, 5:00 PM - 10:00 PM</td>
-                    </tr>
-                    <tr>
-                        <td>Thu</td>
-                        <td>9:00 AM - 3:00 PM, 5:00 PM - 10:00 PM</td>
-                    </tr>
-                    <tr>
-                        <td>Fri</td>
-                        <td>9:00 AM - 3:00 PM, 5:00 PM - 12:00 AM</td>
-                    </tr>
-                    <tr>
-                        <td>Sat</td>
-                        <td>9:00 AM - 3:00 PM, 5:00 PM - 12:00 AM</td>
-                    </tr>
-                </table>
+            <div class="video">
+                <p>Watch this video to learn about how LA Chingada prepares their signature dishes</p>
+                <iframe width="560" height="315" 
+                    src="https://www.youtube.com/embed/Aye9PJym-28?si=jhjGHELiHqq3NqLm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                </iframe>
             </div>
         </div>
     </div>
-    <p>Watch this video to learn about how LA Chingada prepares their signiture dishes</p>
-	<iframe width="560" height="315" 
-        src="https://www.youtube.com/embed/Aye9PJym-28?si=jhjGHELiHqq3NqLm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-    </iframe>
+
     <div class="container2">
         <div class="card">
             <img class="img" src="../imgs/lachingada_imgs/1x1chilaquiles-divorciados.jpg" alt="">
